--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ r2d2_redis = "0.14.0"
 uuid = { version = "1.0", features = ["serde", "v4"] }
 actix-xml = "0.2.0"
 quick-xml = { version = "0.31.0", features = ["serialize"] }
+thiserror = "1.0.61"
