--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ uuid = { version = "1.0", features = ["serde", "v4"] }
 actix-xml = "0.2.0"
 quick-xml = { version = "0.31.0", features = ["serialize"] }
 thiserror = "1.0.61"
+reqwest = "0.12.4"
